# Water-Controller

./: .gitignore  192.168.6.13.har  28ddae8_.pcapng  9e40a0a.pcapng  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DATABASE_AUTH_AUDIT.md  DOCKER_NAMING_AUDIT.md  IMPORT_AUDIT_FIXES.txt  IMPORT_AUDIT_SUMMARY.txt  Makefile  NAMING_AUDIT_FINDINGS.md  NEXT_STEPS.md  PROFINET_INVESTIGATION.md  PROFINET_PCAP_ANALYSIS.md  README.md  STANDARDIZATION_CHANGES.md  TECH_DEBT_AUDIT.md  VALIDATION_REPORT.md  bootstrap.sh  config_sync.c  config_sync.h  df93bc5.pcapng  evidence.har  new.txt  profi.pcapng  profinet_connect_scapy_layers.py  profinet_diagnosti_v3.py  profinet_diagnostic_v3.py  push-profinet-commit.sh  user_sync.c  user_sync.h  versions.json
.github/: markdown-link-check.json
.github/workflows/: build-release.yml  ci.yml  controller-rebuild.yml  deploy.yml  docker.yml  docs.yml  release.yml  schema-sync.yml
bootstrap/: bootstrap.sh
bootstrap/lib/: constants.sh  docker.sh  helpers.sh  logging.sh  operations.sh  staging.sh  validation.sh
cmake/: board-detect.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake  toolchain-luckfox.cmake
config/: .docker-credentials  README.md  ports.env  ports.sh
config/systemd/: loki-config.yml  promtail-config.yml
controller/: Dockerfile  docker-compose.yml  pn_controller.py  pn_debug.py  pn_scapy_controller.py  profinet_scapy.py
docker/: Dockerfile.controller  Dockerfile.profinet-scapy  Dockerfile.runner  Dockerfile.ui  Dockerfile.web  README.md  controller-entrypoint.sh  docker-compose.prod.yml  docker-compose.runner.yml  docker-compose.yml  generate-build-env.sh  init.sql  runner-entrypoint.sh
docker/config/: water-controller.json
docker/loki/: loki-config.yml
docker/migrations/: 001_enable_timescaledb_compression.sql
docs/: ADR-001-SYSTEM-READINESS-GATES.md  ALARM_ARCHITECTURE.md  ALARM_RESPONSE_PROCEDURES.md  CI_OPTIMIZATION_ANALYSIS.md  COMMISSIONING_PROCEDURE.md  CONTAINER_FEATURE_PARITY.md  CONTROLLER_TEAM_INSTRUCTIONS.md  DEPLOYMENT.md  DEPLOYMENT_REVIEW_SUMMARY.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPMENT_GUIDELINES.md  DOCUMENTATION_REVIEW_REPORT.md  FAULT_INJECTION_TESTING.md  FIELD_UPGRADE_GUIDE.md  FRONTEND_GAP_ANALYSIS.md  FUTURE_FEATURES.md  HARMONIOUS_SYSTEM_DESIGN.md  HMI-ANALYSIS.md  INDEX.md  INSTALL.md  INTEGRATION_AUDIT_REPORT.md  ISA101-IMPLEMENTATION-REVIEW.md  MODBUS_GATEWAY_GUIDE.md  NEXT-STEPS-COMPREHENSIVE.md  NEXTJS_HMI_WIRING_AUDIT.html  OPENAPI_SPECIFICATION.md  OPERATOR.md  OPTIMIZATION_AUDIT_REPORT.md  PERFORMANCE_TUNING_GUIDE.md  PRODUCTION_READINESS_ANALYSIS.md  PROFINET_SCAPY_AUDIT.md  QUICK_REFERENCE.md  README.md  RTU_SHARED_PROTOCOL_SYNC.md  SCADA_STATUS_ASSESSMENT.md  TODO-Q4-2026-ALARM-AUDIO.md  TROUBLESHOOTING_GUIDE.md  UPGRADE.md  WATER_CONTROLLER_DEPLOYMENT_PROMPT.md  WATER_CONTROLLER_DEPLOYMENT_SYSTEM_PROMPT.md  (+1 more)
docs/guides/: CONFIGURATION.md  (+17 more)
experimental/: test-uuid-swap.py
scripts/: README.md  backup-automation.sh  build-pnet.sh  diagnose-profinet-rpc.sh  fix-database-auth.sh  generate_c_types.py  generate_docs.py  generate_openapi.py  generate_pydantic.py  install-hmi.sh  install-promtail.sh  install-rpi3b.sh  install.sh  profinet_connect.py  profinet_debug.py  profinet_working.py  remove.sh  setup-credentials.sh  setup-log-forwarding.sh  setup-postgres-production.sh  setup-profinet-network.sh  test-hmi-wiring.sh  test-profinet-FIXED.py  test-profinet-scapy.py  test-profinet-working.py  test-rtu-hardware.sh  upgrade.sh  validate-deployment.sh  validate_config.py  validate_integration.py  validate_schemas.py  validate_sync.py  water-controller
src/: main.c  types.h
systemd/: water-controller-api.service  water-controller-hmi.service  water-controller-loki.service  water-controller-modbus.service  water-controller-promtail.service  water-controller-ui.service  water-controller.service
tests/: test_alarms.c  test_control.c  test_historian.c  test_profinet.c  test_quality.c  test_registry.c
web/api/: .env.example  IMPORT_AUDIT_REPORT.md  alembic.ini  db_persistence.py  historian.py  main.py  main_legacy.py  pyproject.toml  requirements-dev.txt  requirements.txt  shm_client.py
web/api/alembic/: env.py
web/api/alembic/versions/: 20250103_0001_initial_schema.py
web/api/app/: __init__.py  main.py
web/api/app/api/: __init__.py  websocket.py
web/api/app/api/v1/: __init__.py  alarms.py  auth.py  backup.py  control.py  controls.py  demo.py  discover.py  logging.py  metrics.py  modbus.py  pid.py  profinet.py  rtu.py  rtus.py  sensors.py  services.py  slots.py  system.py  templates.py  trends.py  trends_optimized.py  users.py
web/api/app/core/: __init__.py  auth.py  config.py  config_validator.py  errors.py  exceptions.py  logging.py  network.py  password_policy.py  paths.py  ports.py  rate_limit.py  rtu_utils.py  sanitization.py  startup.py  state_machine.py
web/api/app/models/: __init__.py  alarm.py  audit.py  base.py  config.py  discovery.py  historian.py  legacy.py  pid.py  rtu.py  template.py  user.py
web/api/app/persistence/: __init__.py  alarms.py  audit.py  base.py  config.py  discovery.py  historian.py  modbus.py  pid.py  rtu.py  sessions.py  users.py
web/api/app/schemas/: __init__.py  alarm.py  common.py  control.py  pid.py  profinet.py  rtu.py  sensor.py  slot.py  template.py  trends.py
web/api/app/services/: __init__.py  alarm_service.py  cache_service.py  controller_heartbeat.py  dcp_discovery.py  demo_mode.py  modbus_service.py  pn_controller.py  pn_cyclic_io.py  profinet_client.py  profinet_resilience.py  profinet_scapy.py  rtu_manager.py  rtu_service.py  shm_client.py  websocket_publisher.py
web/api/migrations/: env.py
web/api/migrations/versions/: 20260103_0001_initial_schema.py  20260104_0002_add_performance_indexes.py
web/api/tests/: __init__.py  conftest.py  test_backup.py  test_mixin.py  test_persistence.py  test_pid.py  test_profinet_packets.py  test_quality.py  test_rtus.py  test_state_machine.py  test_templates.py
web/api/tests/integration/: __init__.py  conftest.py  test_profinet_live.py
(+318 files in other folders)
