# Water-Controller API - Python Project Configuration
# Defines mypy, ruff, and pytest settings per DEVELOPMENT_GUIDELINES.md

[project]
name = "water-controller-api"
version = "1.2.0"
description = "Water Treatment Controller REST/WebSocket API"
requires-python = ">=3.11"

[tool.mypy]
# Type checking configuration per DEVELOPMENT_GUIDELINES.md
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
no_implicit_optional = true

# Per-module overrides for gradual adoption
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "shm_client"
ignore_errors = true  # Legacy shared memory module

[[tool.mypy.overrides]]
module = "app.persistence.*"
warn_return_any = false  # SQLite cursor returns Any
disallow_untyped_defs = false  # Context managers need flexible typing

[[tool.mypy.overrides]]
module = "app.services.*"
warn_return_any = false  # SQLAlchemy queries return Any

[[tool.mypy.overrides]]
module = "app.core.rtu_utils"
warn_return_any = false  # SQLAlchemy queries return Any

[[tool.mypy.overrides]]
module = "app.core.paths"
disallow_untyped_defs = false  # Complex dict typing for status checks
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.core.logging"
disallow_untyped_defs = false  # Logging extras use **kwargs

[[tool.mypy.overrides]]
module = "app.api.v1.*"
warn_return_any = false  # SQLAlchemy returns Any
disallow_untyped_defs = false  # Route handlers have complex signatures

[[tool.mypy.overrides]]
module = "app.api.websocket"
disallow_untyped_defs = false  # WebSocket handlers

[[tool.mypy.overrides]]
module = "app.models.*"
disallow_untyped_defs = false  # SQLAlchemy model methods

[[tool.mypy.overrides]]
module = "app.schemas.*"
disallow_untyped_defs = false  # Pydantic validators

[[tool.mypy.overrides]]
module = "app.core.config"
disallow_untyped_defs = false  # Settings class __init__

[[tool.mypy.overrides]]
module = "app.core.exceptions"
warn_return_any = false  # Exception details dict

[[tool.mypy.overrides]]
module = "app.core.auth"
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.main"
disallow_untyped_defs = false  # Middleware and lifespan handlers

[tool.ruff]
# Linting configuration per DEVELOPMENT_GUIDELINES.md
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
# Start with reasonable defaults, expand toward ALL
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (common in FastAPI route handlers)
    "B008",    # Function call in default argument (FastAPI Depends() pattern)
    "PLW0603", # Global statement (singleton patterns for services)
    "PLC0415", # Import outside top-level (deferred imports for circular deps)
    "E402",    # Module import not at top (follows deferred import pattern)
    "PLR0912", # Too many branches (complex validation logic)
    "PLR0915", # Too many statements (route handlers with validation)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]      # Allow unused args and magic values in tests
"__init__.py" = ["F401"]            # Allow unused imports in __init__.py
"app/api/v1/*.py" = ["ARG001"]      # Allow unused args in route handlers (FastAPI injects them)
"app/schemas/*.py" = ["PLR2004"]    # Allow magic values in validation schemas (e.g., len == 4 for IPv4)
"app/core/logging.py" = ["PLR2004"] # Allow magic values for UUID length checks
"app/core/startup.py" = ["SIM102"]  # Allow nested ifs for startup logic clarity
"app/main.py" = ["ARG001"]          # Allow unused 'app' arg in lifespan context manager
"app/core/auth.py" = ["ARG001"]     # Allow unused 'success' arg for API consistency

[tool.ruff.format]
# Formatting configuration (if using ruff format)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Testing configuration per DEVELOPMENT_GUIDELINES.md
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["app"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Coverage reporting per DEVELOPMENT_GUIDELINES.md (>80% target)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80  # Per DEVELOPMENT_GUIDELINES.md - production gate
show_missing = true
